syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.training.marketplace.product.controller.modal.request";

import "product.proto";

message GetProductDetailResponse{
  Product product = 1;
}
